<resources>
    <string name="app_name">AndroidBoilerplate</string>
    <string name="log_in">Log in</string>
    <string name="already_have_account_prompt">Got an account? Log in.</string>
    <string name="do_not_have_an_account_prompt">Not got an account? Sign up</string>
    <string name="auth_identifier_input_label">Username</string>
    <string name="auth_password_input_label">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="app_navigation_name">Android Boilerplate</string>
    <string name="app_nav_subheading">test@example.com</string>
</resources>
